--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ terraform.rc
 .terraform.lock.hcl
 
 .DS_Store
+
+#Ignore Terraform Config file. Rename from terraform.tf.example to terraform.tf and change accordingly
+terraform.tf
