--- a/aws_infra/variables.tf.example
+++ b/aws_infra/variables.tf.example
@@ -1,8 +1,8 @@
 variable "project_name" {
   type = string
-  default = "lambda-terraform-github"
+  default = "lambda-terraform-github" 
 }
 variable "aws_region" {
   type = string
-  default = "af-south-1"
+  default = "us-east-1" #Change
 }
