Added github steps

--- a/aws_infra/terraform.tfvars.example
+++ b/aws_infra/terraform.tfvars.example
@@ -1,6 +1,1 @@
-access_key_value = "<{ YOUR API KEY}>"
-
-#Create User for Terraform Cloud. 
-credentials "app.terraform.io" {
-  token = "xxxxxx.atlasv1.zzzzzzzzzzzzz"
-}
+api_access_key_value = "<{ YOUR API KEY}>"
