--- a/github_actions/variables.tf.example
+++ b/github_actions/variables.tf.example
@@ -4,3 +4,9 @@ variable "aws_region" {
   default     = "us-east-1"
   description = "AWS region"
 }
+
+variable "repository_name" {
+  type        = string
+  description = "Name of repository to create"
+  default     = "terraform-project"
+}
